# ngs-chew

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  GRCh37_sitesX.bed  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  chew-comparison.ibs0.txt  chew-comparison.mask.txt  chew-comparison.relatedness.txt  chew-stats.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  main.yml  release-please.yml
chew/: __init__.py  __main__.py  _version.py  cli.py  common.py  compare.py  fingerprint.py  from_fastq.py  kmers.py  plot_aab.py  plot_compare.py  plot_var_het.py  roh.py  serve.py  stats.py  test.py  test2.py
docs/: conf.py  doc_quickstart.rst  index.rst
misc/sites/: README.md
misc/sites/pca/: .gitignore  PCA.ipynb  Snakefile
misc/sites/select-auto/: .gitignore  Snakefile
misc/sites/select-xy/: .gitattributes  Snakefile
misc/sites/select-xy/data/: Agilent_V6.bed
requirements/: base.txt  dev.txt  misc.txt  serve.txt  test.txt
tests/: conftest.py  test_compare.py  test_run_fingerprint.py  test_run_fingerprint_bam.py  test_run_fingerprint_fastq.py
tests/data/: chew-stats.txt  dp.vcf  dpad.vcf  hs37d5.chr1_fragment.fa  hs37d5.chr1_fragment.fa.fai  igsr.HG00102.TP73.bam  igsr.HG00102.TP73.bam.bai  igsr.HG00102.TP73.npz  none.vcf  sites.bed  statsfile  test.npz
tests/data/fingerprint/: .gitignore  GRCh38_full_analysis_set_plus_decoy_hla.fa.gz.gzi  HG00138_WES_GRCh37.excerpt.bam.bai  HG00138_WES_GRCh37.fingerprint.npz  HG00138_WES_GRCh38.excerpt.bam.bai  HG00138_WES_GRCh38.fingerprint.npz  HG00138_WGS_GRCh38.excerpt.bam.bai  HG00138_WGS_GRCh38.fingerprint.npz  build.sh  download.sh  hs37d5.fa.gz.gzi
